2017-01-20  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/metrology.py:

	Started module with metrological functions.  Has soft dependency on
	sympy.

2017-01-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	Fixed __eq__() to work with empty GriddedField objects (cases where gf.data
	and gf.grids are None).

	* typhon/arts/tests/test_griddedfield.py:

	Added an equality test for empty GriddedFields.

2017-01-16  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Added new function colors2cmap() to convert a given list of colors (named
	color, rgb or hex) into a LinearSegmentedColormap.

7-01-10  Gerrit Holl  <g.holl@reading.ac.uk>

201	* typhon/datasets/tovs.py(HIRS):

	(._read):

	- Throw out anyone who doesn't want to stand in line nicely

7-01-10  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset.read):

	- Don't fail on verifying time sorting if our array is too short to do
	so

	* typhon/datasets/tovs.py(HIRS):

	(._read):

	- Throw out scanlines where the time is bad.  Masking is not enough;
	time series processing tools such as xarray assume sequential time so
	enforcing this makes life muc heasier later on

	(.filter_firstline):

	- Change message from debug to warning if GFL DB cannot be read.

	(.apply_flags):

	- Flag times when qidonotuse is set, but do so if and only if the time
	at that point is inconsistent with either the preceding or the
	following scanline.  This gets rid of some (perhaps most?) instances
	where there are outliers in the time axis.

2017-01-09  Gerrit Holl  <g.holl@reading.ac.uk>:

	* typhon/datasets/dataset.py(Dataset.read):

	- Bugfix: do not crash if first granule empty or rejected.

	* typhon/datasets/tovs.py(HIRS.filter_firstline):

	- Don't make a copy, just read into memory already.  Certainly don't
	make a copy every time, this is a dramatic slowdown.

2017-01-09  Gerrit Holl  <g.holl@reading.ac.uk>:
